practices/kubernetes/objects/network-policy/accept-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-accept-all
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - { }
  egress:
    - { }
  policyTypes:
    - Ingress
    - Egress
