practices/kubernetes/objects/network-policy/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-accept-all
spec:
  podSelector: { }
  ingress: [ ]
  egress: [ ]
  policyTypes:
    - Ingress
    - Egress
